<resources>
    <string name="app_name">Unpas</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="surampak_sakosoy">Surampak Sakosoy</string>
    <string name="hukum_pidana">Hukum Pidana</string>
    <string name="forum">Forum</string>
    <string name="absen">Absen</string>
    <string name="jadwal">Jadwal</string>
    <string name="lap_absensi">Lap.Absensi</string>
    <string name="pengumuman">PENGUMUMAN:</string>
    <string name="content_pengumuman">Menampilkan Informasi informasi dari kampus</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keluar">Keluar</string>
    <string name="mac">MAC ADDRESS BLUETOOTH</string>
    <string name="perhatian">PERHATIAN !</string>
    <string name="panduan_mac">MAC ADDRESS Bluetooth belum terdaftar di server \nUntuk melakukan Absen diperlukan MAC ADDRESS Bluetooth pada perangkat handphone anda.  \nUntuk mengetahui MAC ADDRESS bluetooth anda :  \n1. Nyalakan Bluetooth  \n2. Masuk menu Setting  \n3. Masuk menu Tentang Ponsel  \n4. Cari informasi alamat bluetooth  \n5. Catat Mac Address pada menu alamat bluetooth  \n6. Masukan Mac Address pada form dibawah  \n7. Klik Simpan   \n\nanda tidak dapat melakukan absen jika mac address yang anda masukan tidak sesuai. \nSetelah mengupdate MAC ADDRESS halaman ini tidak akan ditampilkan kembali.</string>
    <string name="update">Update</string>
    <string name="qr_judul">Scan QRCODE ke layar Scanner Kelas</string>
    <string name="memperbaharui_qr_core">memperbaharui QR Code</string>
    <string name="selesai">Selesai</string>
    <string name="denied">kembalikan</string>
    <string name="peringatan">Perangkat ini sudah terintegrasi \ndengan akun </string>
    <string name="peringatan2">Hubungi Administrator jika merasa ini adalah perangkat anda</string>
    <string name="nama">Yadi</string>
    <string name="exit">Keluar</string>
    <string name="login">login</string>
    <string name="registered">Akun yang anda masukan sudah terdaftar di perangkat lain</string>
    <string name="tambah">TAMBAH</string>
    <string name="pengumunan_ditujukan_ke">Pengumunan ditujukan ke :</string>
    <string name="dosen_matakuliah">Dosen Matakuliah :</string>
    <string name="mahasiswa_jurusan">Mahasiswa Jurusan :</string>
    <string name="kembali">Kembali</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="pilih_matakuliah">Pilih Maatakuliah</string>
    <string name="pilih_dosen">Pilih Dosen</string>
    <string name="dosen">Nama Dosen</string>

    <string name="arrayTujuan">Pilih tujuan …</string>
    <string name="nim">NIM</string>
    <string name="nama_re">Nama</string>
    <string name="jurusan_re">Jurusan</string>
    <string name="fakultas_re">Fakultas</string>
    <string name="matakuliah_re">Matakuliah</string>
    <string name="dosen_re">Dosen</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="jam_selesai">Jam Selesai</string>
    <string name="ruangan_re">Ruangan</string>
    <string name="hp">HP</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="ruang_hukum">Ruang Hukum</string>
    <string name="jam">08:30</string>
    <string name="jadwal_kuliah">Jadwal Kuliah</string>
    <string name="durasi">durasi</string>
    <string name="nointernet">Tidak ada koneksi Internet</string>
    <string name="kesalahan">Kesalahan</string>
    <string name="ulangi">Ulangi</string>
    <string name="server_problem">atau tidak ada respon dari server</string>
    <string name="kirim">Kirim</string>
    <string name="pengirim">Pengirim</string>
    <string name="pesan">pesan</string>
    <string name="notif">Persiapan mengajar </string>
    <string name="notif2"> akan dimulai 30 menit lagi</string>
    <string name="notif3">Harap mempersiapkan diri,  kuliah </string>
    <string name="notif4"> akan dimulai 30 menit lagi, Absensi bisa dilakukan 15 menit sebelum matakuliah dimulai dan toleransi 15 menit setelah matakuliah dimulai, jangan sampai terlambat, selamat Mengajar</string>
    <string name="notif5">Persiapan belajar </string>
    <string name="notif6"> akan dimulai 30 menit lagi</string>
    <string name="notif7">Harap memperispkan diri, kuliah </string>
    <string name="notif8"> akan dimulai 30 menit lagi, Absensi bisa dilakukan 15 menit sebelum matakuliah dimulai dan toleransi keterlambatan 15 menit setelah matakuliah dimulai, jangan sampat terlambat, selamat Belajar</string>
    <string-array name="tujuan_arrays">
        <item>Dosen</item>
        <item>Mahasiswa</item>
        <item>Semua</item>
    </string-array>
</resources>
