<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgunpas"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:fitsSystemWindows="true"
    tools:context=".PengumumanActivity">

    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/peng_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/pengumuman_greeting"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/bodas"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pengumuman"/>

    <View
        android:id="@+id/peng_line"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@+id/pengumuman_greeting"
        android:background="@color/bodas"
        android:layout_width="match_parent"
        android:layout_height="2dp" />
    
    <LinearLayout
        android:id="@+id/peng_ll_tujuan"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/peng_line"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/pengumunan_ditujukan_ke"
            android:textColor="@color/hejotaikuda" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:background="@color/bodas"
            android:spinnerMode="dropdown"
            android:entries="@array/tujuan_arrays"
            android:prompt="@string/arrayTujuan"
            android:id="@+id/peng_acs_tujuan"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/peng_ll_dosen"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/peng_ll_tujuan"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dosen_matakuliah"
            android:textColor="@color/hejotaikuda" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/peng_acs_dosen"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/peng_ll_mahasiswa"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/peng_ll_dosen"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/mahasiswa_jurusan"
            android:textColor="@color/hejotaikuda" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/peng_acs_mahasiswa"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@null"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/peng_button_back"
            android:layout_marginTop="20dp"
            android:textColor="@color/hideung"
            android:text="@string/kembali"
            android:background="@drawable/button_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            style="@null"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/peng_button_next"
            android:layout_marginTop="20dp"
            android:textColor="@color/hideung"
            android:text="@string/lanjutkan"
            android:background="@drawable/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>