<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgunpas"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <include
            android:id="@+id/main_page_toolbar"
            layout="@layout/app_bar_layout" />

        <ImageView
            android:id="@+id/main_logo"
            android:contentDescription="@null"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/logounpas"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/main_selamat_datang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang"
            android:textColor="@color/bodas"
            android:layout_below="@+id/main_logo"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_marginTop="6dp"
            android:id="@+id/main_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surampak_sakosoy"
            android:textColor="@color/bodas"
            android:layout_below="@+id/main_selamat_datang"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/main_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hukum_pidana"
            android:textColor="@color/bodas"
            android:layout_below="@+id/main_nama"
            android:textAlignment="center"
            android:textSize="12sp"/>
        <LinearLayout
            android:id="@+id/main_linar_menu"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="90dp"
            android:layout_below="@id/main_jurusan"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/main_cv_forum"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                android:layout_weight="1">

                <RelativeLayout
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/main_icon_forum"
                        android:contentDescription="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/iconforum"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forum"
                        android:textAlignment="center"
                        android:textColor="@color/hejotaikuda"
                        android:layout_below="@+id/main_icon_forum"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/main_cv_absen"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                android:layout_weight="1">

                <RelativeLayout
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/main_icon_absen"
                        android:contentDescription="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/iconabsen"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/absen"
                        android:textAlignment="center"
                        android:textColor="@color/hejotaikuda"
                        android:layout_below="@+id/main_icon_absen"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/main_cv_jadwal"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                android:layout_weight="1">

                <RelativeLayout
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/main_icon_jadwal"
                        android:contentDescription="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/iconjadwal"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal"
                        android:textAlignment="center"
                        android:textColor="@color/hejotaikuda"
                        android:layout_below="@+id/main_icon_jadwal"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_linar_menu"
            android:layout_margin="18dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/robotolight"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengumuman"
                android:textColor="@color/hejotaikuda"/>
            <RelativeLayout
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="180dp">
                <TextView
                    android:id="@+id/main_content_pengumuman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@color/bodas"
                    android:text="@string/content_pengumuman"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>