<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_marginTop="1.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:background="@color/birujadwal">

                <ImageView
                    android:contentDescription="@null"
                    android:src="@drawable/ic_person_pin_black_24dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_marginStart="1.5dp"
                android:padding="10dp"
                android:layout_weight="1.6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/birujadwal">

                <TextView
                    android:id="@+id/main_pengirim"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:text="@string/pengirim"/>

                <TextView
                    android:textColor="@color/bodas"
                    android:layout_alignParentStart="true"
                    android:id="@+id/main_pesan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pesan"
                    android:layout_below="@+id/main_pengirim"/>

                <TextView
                    android:id="@+id/main_jam"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jam"
                    android:textSize="12sp"
                    android:textColor="@color/biruwa"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>